# agentd

./: .gitignore  ARCHITECTURE.md  CODEX_RESPONSES_CAPTURE_DESIGN.md  README.md  pyproject.toml
examples/: agentd.example.toml  context-profiles.example.toml  context.example.toml  schedules.example.toml
src/agentd/: __init__.py  active_run.py  agent_core.py  bootstrap.py  capture_proxy.py  channel_utils.py  cli.py  codex_app_server.py  codex_usage.py  config.py  context.py  daemon.py  delivery_dispatcher.py  feishu.py  feishu_registration.py  models.py  otel_capture.py  registry.py  run_context.py  run_executor.py  run_projection.py  runner_factory.py  schedule.py  service.py  spawn_coordinator.py  status_rendering.py  title.py  web_gateway.py  web_trace.py
src/agentd/channels/: __init__.py  base.py  delivery.py  feishu.py  web.py  wecom.py
src/agentd/runners/: __init__.py  base.py  claude_code.py  codex.py
src/agentd/skills/agentd-ops/: SKILL.md
tests/: test_agent_core.py  test_attachments.py  test_bootstrap.py  test_capture_proxy.py  test_channels.py  test_cli.py  test_codex_app_server.py  test_codex_usage.py  test_config.py  test_context.py  test_control_commands.py  test_daemon_status.py  test_delivery.py  test_delivery_dispatcher.py  test_durable_runs.py  test_feishu.py  test_feishu_registration.py  test_otel_capture.py  test_registry_channels.py  test_run_context.py  test_run_executor.py  test_runners.py  test_schedule.py  test_service.py  test_spawn_coordinator.py  test_status_rendering.py  test_title.py  test_web_gateway.py  test_web_trace.py
