[project]
name = "agentd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.6.0",
    "tomli>=2.2.1; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[project.scripts]
agentd = "agentd.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
